<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/textView4"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Joaquim Barbosa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="joaquim.barbosa@joaquim.br"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/telefone"
        android:id="@+id/textView6"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtFone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(19) 9900-0000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cpf"
        android:id="@+id/textView7"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="999.999.999-99"/>

    <Button
        android:id="@+id/btnSalvarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"
        android:text="@string/save"/>
</LinearLayout>